# eudaq

cmake/: FindSRS.cmake
doc/manual/: CMakeLists.txt
doc/manual/src/: Monitor.tex
main/exe/: CMakeLists.txt
main/exe/src/: euList.cxx
main/lib/ttree/: CMakeLists.txt
main/lib/ttree/include/eudaq/: TTreeEventConverter.hh
main/lib/ttree/src/: TTreeEventConverter.cc  TTreeEventMonitor.cc
monitors/rootmonitor/: CMakeLists.txt
monitors/rootmonitor/include/eudaq/: ROOTMonitor.hh  ROOTMonitorWindow.hh
monitors/rootmonitor/src/: ROOTMonitorWindow.cc  TTreeEventMonitor.cc
user/: CMakeLists.txt
user/caenReadout/: CMakeLists.txt
user/caenReadout/module/: CMakeLists.txt
user/caenReadout/module/src/: CAENCommProducer.cc
user/cmstotem/: CMakeLists.txt  README.md
user/cmstotem/conf/: SampicDAQ_define.uic  SampicDAQ_init.uic  config_channels.uic  run_mode.uic  run_mode_selftrig.uic
user/cmstotem/misc/: Sampic.conf  Sampic.ini  example_startrun.sh
user/cmstotem/module/: CMakeLists.txt
user/cmstotem/module/include/: SampicMonitor.hh
user/cmstotem/module/src/: SampicDataCollector.cc  SampicDirectSaveDataCollector.cc  SampicMonitor.cc  SampicMonitor.cxx  SampicProducer.cc  SampicRawEvent2StdEventConverter.cc  SampicRawEvent2TTreeEventConverter.cc  SampicTgDataCollector.cc
user/eudet/misc/hw_conf/aida_tlu/: aida_tlu_address-fw_version_14.xml
user/srs/: CMakeLists.txt
user/srs/misc/: Srs.conf  Srs.ini  example_startrun.sh  srs.ini  srs_calibrationpulse_apv0.conf
user/srs/misc/scripts/: adc_card0.txt  apv0.txt  fec0CalPulse.txt  fec0PedestalRunFromOutOfLatency.txt  fec0PhysicsRun.txt  fec0apvreset.txt  fec0reboot.txt  fec0warminit.txt  pll0.txt  set_ip0.txt  start0.txt  stop0.txt
user/srs/module/: CMakeLists.txt
user/srs/module/src/: SrsDataCollector.cc  SrsDirectSaveDataCollector.cc  SrsMonitor.cc  SrsProducer.cc
